# TeacherinatorServer

./: .gitignore  Cargo.toml  Dockerfile  README.md  deployment.yaml  docker-compose.yml
.cargo/: config.example.toml  config.toml
certs/: cert.pem  csr.pem  key.pem
crates/libs/lib-auth/: Cargo.toml
crates/libs/lib-auth/src/: config.rs  lib.rs
crates/libs/lib-auth/src/pwd/: error.rs  mod.rs
crates/libs/lib-auth/src/pwd/scheme/: mod.rs  scheme_01.rs  scheme_02.rs
crates/libs/lib-auth/src/token/: mod.rs
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/: config.rs  lib.rs
crates/libs/lib-core/src/_dev_utils/: dev_db.rs  mod.rs
crates/libs/lib-core/src/ctx/: error.rs  mod.rs
crates/libs/lib-core/src/model/: activity.rs  base.rs  building.rs  center_schedule_hour.rs  classroom.rs  classroom_type.rs  control.rs  department.rs  error.rs  group.rs  mod.rs  project.rs  schedule.rs  schedule_hour.rs  specialty.rs  sport.rs  subject.rs  task.rs  teacher.rs  user.rs
crates/libs/lib-core/src/model/store/: mod.rs
crates/libs/lib-rpc/: Cargo.toml
crates/libs/lib-rpc/src/: error.rs  lib.rs  params.rs  params_mongo.rs  resources.rs
crates/libs/lib-rpc/src/router/: from_resources.rs  into_params.rs  mod.rs  rpc_handler.rs  rpc_handler_wrapper.rs
crates/libs/lib-rpc/src/rpcs/: activity_rpc.rs  building_rpc.rs  center_schedule_hour_rpc.rs  classroom_rpc.rs  classroom_type_rpc.rs  department_rpc.rs  group_rpc.rs  mod.rs  project_rpc.rs  schedule_hour_rpc.rs  schedule_rpc.rs  specialty_rpc.rs  subject_rpc.rs  task_rpc.rs  teacher_rpc.rs  user_rpc.rs
crates/libs/lib-utils/src/: envs.rs  time.rs
crates/services/web-server/: Cargo.toml
crates/services/web-server/examples/: quick_dev.rs
crates/services/web-server/src/: error.rs  main.rs
crates/services/web-server/src/log/: mod.rs
crates/services/web-server/src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  mw_stamp.rs  routes_login.rs  routes_rpc.rs  routes_static.rs
examples/: quick_dev.rs
sql/dev_initial/: 00-recreate-db.sql  01-create-schema.sql  02-dev-seed.sql
src/: config.rs  main.rs
src/_dev_utils/: dev_db.rs  mod.rs
src/crypt/: error.rs  token.rs
src/log/: mod.rs
src/model/: activity.rs  base.rs  error.rs  mod.rs  sport.rs  task.rs  user.rs
src/model/store/: error.rs  mod.rs
src/utils/: error.rs  mod.rs
src/web/: error.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs
src/web/rpc/: activity_rpc.rs  mod.rs  task_rpc.rs
