[package]
name = "sports-guide"
version = "0.1.0"
edition = "2021"
authors = ["Juan Bautista Valero Carrasco <jbvc91@gmail.com>"]
description = "App for coaches"
homepage=""
repository = ""


[dependencies]
tokio = { version = "1", features = ["full"] }
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# -- Web
axum = "0.6"
tower-http = { version = "0.4", features = ["fs", "cors"] }
tower-cookies = "0.9"
# -- Data
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "uuid", "time" ] }
sqlb = "0.3" # Optional
# -- Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# -- Crypt & Encoding
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
base64-url = "2"
# -- Others
uuid = {version = "1", features = ["v4","fast-rng",]}
time = "0.3"
lazy-regex = "3"
async-trait = "0.1"
strum_macros = "0.25"
# -- MongoDB
mongodb = { version = "2.6.1", features = ["bson-chrono-0_4"] }
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc

futures = "0.3"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.5"
serial_test = "2"

