[package]
name = "lib-core"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
# -- App Libs
lib-utils = { path = "../../libs/lib-utils" }
lib-auth = { path = "../../libs/lib-auth" }
# -- Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["time_0_3"] }
# -- Data
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid"] }
sea-query = "0.30"
sea-query-binder = { version = "0.5", features = ["sqlx-postgres", "with-uuid", "with-time"] }
modql = { version = "0.3.4", features = ["with-sea-query"] }
# -- Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# -- Others
uuid = { version = "1", features = ["v4", "fast-rng", ] }
time = { version = "0.3", features = ["formatting", "parsing", "serde", "local-offset"] }
strum_macros = "0.25"
enum_dispatch = "0.3"
derive_more = { version = "1.0.0-beta", features = ["from"] }
# -- MongoDB
mongodb = { version = "2.6.1", features = ["bson-chrono-0_4"] }
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc

futures = "0.3"
log = "0.4.20"
chrono = "0.4.31"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
serial_test = "2"