[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
lib-utils = { path = "../../libs/lib-utils" }
lib-rpc = { path = "../../libs/lib-rpc" }
lib-auth = { path = "../../libs/lib-auth" }
lib-core = { path = "../../libs/lib-core" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
tower-cookies = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = "0.3"
uuid = { version = "1", features = ["v4", "fast-rng", ] }
strum_macros = "0.25"
derive_more = { version = "1.0.0-beta", features = ["from"] }
clokwerk = "0.3.1"
chrono = "0.4.31"
dotenv = "0.15.0"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1"
serial_test = "2"
time = "0.3"